# CarRace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/models/: a.txt
assets/shaders/: a.txt
rendering_3d_scene/: CMakeLists.txt  Camera.h  Model.h  Scene.cpp  Scene.h  imgui.ini  main.cpp
src/: CMakeLists.txt  imgui.ini
src/app/: main.cpp
src/game/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/game/Objects/: CubeObejct.cpp  CubeObejct.h  GameObject.cpp  GameObject.h
src/gfx/: Cube.cpp  Cube.h  Mesh.h  Model.h  Rendering.cpp  Rendering.h
src/gfx/lights/: Light.h  LightDirectional.h  LightPoint.h  LightSpot.h
